# rssa

./: .gitignore  DESCRIPTION  build_docs.py  setup.py
R/: chankel.R  hankel.R  pssa.R  ssa.R  toeplitz.R  wossa.R
docs/_build/: index.html
inst/extdata/: 1dssa.testdata.rda  common.test.methods.R  gentest-1dssa.R  gentest-mssa.R  gentest-pssa.R  gentest-toeplitz.R  mssa.batching.R  mssa.testdata.rda  toeplitz.testdata.rda
man/: ssa.Rd
py_rssa/: README.md  pyproject.toml
py_rssa/docs/: conf.py  index.rst
py_rssa/py_rssa/: __init__.py  _fast_hankel.c  autossa.py  cadzow.py  capabilities.py  chankel.py  datasets.py  eossa.py  gapfill.py  hankel.py  hbhankel.py  hmatr.py  mssa.py  ndssa.py  ossa.py  parestimate.py  plot.py  plot2.py  plotn.py  ssa.py  toeplitz.py  utils.py
py_rssa/tests/: test_basic.py  test_cadzow.py  test_capabilities.py  test_chankel.py  test_cssa.py  test_eossa.py  test_forecast.py  test_gap_fill.py  test_hbhankel.py  test_hmatr.py  test_mssa.py  test_ndssa.py  test_ossa.py  test_plot.py  test_plotn.py  test_plotting.py  test_pssa.py  test_wossa.py
pyrssa/: __init__.py
tests/testthat/: test-2dssa.R  test-circular1d.R  test-circular2d.R  test-forecast.finite.rank.R  test-marginalL.R  test-mssa.R  test-ossa.R  test-pssa.R  test-serialize.R  test-sh1dssa.R  test-sh2dssa.R  test-wcor.R
