[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_rssa"
version = "0.1.0"
description = "Partial Python port of rssa"
authors = [{name = "rssa maintainer"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "scipy"]

[tool.setuptools.packages.find]
where = ["py_rssa"]
